[package]
name = "machfind"
version = "0.2.0"
authors = ["Armin Ronacher <armin.ronacher@active-4.com>"]

[lib]
name = "libmachfind"
path = "src/lib.rs"

[[bin]]
name = "machfind"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.5", default-features = true, features = ["cargo", "wrap_help"] }
mach_object = "0.1.17"
walkdir = "2.4.0"
uuid = "1.4.1"
error-chain = "0.12.4"
memmap = "0.7.0"
